# maurice-2004

./: .gitignore  README.md  changeval.hoc  graph.hoc  init.hoc  init.py  mosinit.hoc  netpyne-init.py  netpyne-interneuron-definition.py  pyproject.toml  readme.txt  temp.json
examples/: tut1.py  tut8.json  tut_import.py
examples/batch_tutorial/: tut8_analysis.py  tut8_batch.py  tut8_cfg.py
mainen-test/: mainen-init.py  mainen.py
netpyne-batch-running/: asdf_cfg.py  asdf_netParams.py  icos.mod  netpyne-init.py  netpyne_analysis.py  netpyne_backup.py  netpyne_batch.py  netpyne_cfg.py  netpyne_init.py  netpyne_interneuron_definition.py  netpyne_netParams.py  netpyne_single.py  temp.json
