[tool.poetry]
name = "maurice-2004-code"
version = "0.1.0"
description = ""
authors = ["Austin E Soplata <austin.soplata@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
NEURON = "^7.8.1"
netpyne = "^0.9.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
